--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
   provider: ^6.1.5+1
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
